# autonomy-from-scratch

./: .gitignore  CMakeLists.txt  README.md
controllers/line_follower/: CMakeLists.txt  line_follower.cpp
controllers/pid_control/: CMakeLists.txt  data_logger.hpp  pid.hpp  pid_control.cpp  pid_controller.hpp
controllers/pid_control/analysis/: error_test.ipynb
controllers/pid_control/out_data/: pid_kp_0.015_ki_0.000_kd_0.000.csv  pid_kp_0.025_ki_0.000_kd_0.000.csv  pid_kp_0.150_ki_0.000_kd_0.000.csv
protos/: StaticMazeBlock.proto
worlds/: Corridor.wbt  line_follower.wbt  maze.wbt
